# unitreeA1

./: .gitignore  README.md  frames.gv
maps/: 14.bag  14.bag_raw  15.bag  15.bag_raw  22.bag  22.bag_raw  23.bag  23.bag_raw  24.bag  24.bag_raw  32.bag  32.bag_raw  34.bag  34.bag_raw  35.bag  35.bag_raw  38.bag  38.bag_raw  42.bag  42.bag_raw  44.bag  44.bag_raw  46.bag  46.bag_raw  46ama45.bag  46ama45.bag_raw  47.bag  47.bag_raw  52.bag  52.bag_raw  53.bag  53.bag_raw  54.bag  54.bag_raw  56.bag  56.bag_raw  57.bag  57.bag_raw  c3424.bag  c3424.bag_raw  (+5 more)
src/cpr_gazebo/: README.md
src/cpr_gazebo/cpr_inspection_gazebo/launch/: inspection_world.launch
src/cpr_gazebo/cpr_inspection_gazebo/urdf/: inspection_geometry.urdf.xacro
src/elevation_map_merger/: CMakeLists.txt  package.xml
src/elevation_map_merger/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/elevation_map_merger/launch/: final_challenge.launch  octomap.launch
src/elevation_map_merger/src/: elevation_to_octo.cpp  elevation_to_octo_old.cpp  merge_maps.cpp
src/elevation_mapping/elevation_mapping/scripts/: combine_maps.py
src/elevation_mapping/elevation_mapping_demos/: CMakeLists.txt  package.xml
src/elevation_mapping/elevation_mapping_demos/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/elevation_mapping/elevation_mapping_demos/config/param/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/elevation_mapping/elevation_mapping_demos/config/postprocessing/: postprocessor_pipeline.yaml
src/elevation_mapping/elevation_mapping_demos/config/robots/: unitree_a1.yaml
src/elevation_mapping/elevation_mapping_demos/launch/: elevation_map.launch  map_combine.launch  move_base.launch  move_base_org.launch  octomap.launch  unitree_a1.launch
src/elevation_mapping/elevation_mapping_demos/maps/: my_global_map.pgm  my_global_map.yaml
src/elevation_mapping/elevation_mapping_demos/src/: elevation_to_occupancy.cpp  elevation_to_occupancy_old.cpp  x.yaml
src/elevation_mapping/integration/: elevation_map_134.bag  elevation_map_15.bag  elevation_map_32.bag  elevation_map_34.bag  elevation_map_52.bag  elevation_map_54.bag
src/octomap_to_occupancy/: CMakeLists.txt  package.xml
src/octomap_to_occupancy/launch/: octomap_to_occupancy.launch
src/octomap_to_occupancy/src/: octomap_to_occupancy.cpp
src/ros_unitree/unitree_guide/unitree_guide/include/interface/: KeyBoard.h
src/ros_unitree/unitree_guide/unitree_guide/scripts/: cmd_vel_publisher.py  imu_to_rpy.py  pose_translator.py
src/ros_unitree/unitree_guide/unitree_guide/src/interface/: KeyBoard.cpp
src/ros_unitree/unitree_guide/unitree_move_base/launch/: move_base.launch
src/ros_unitree/unitree_ros/robots/a1_description/launch/: check_joint.rviz
src/ros_unitree/unitree_ros/robots/a1_description/urdf/: a1.urdf
src/ros_unitree/unitree_ros/robots/a1_description/xacro/: gazebo.xacro  robot.xacro
src/ros_unitree/unitree_ros/unitree_gazebo/launch/: robo.launch  robot_simulation_modified.launch
src/summit_odometry/: CMakeLists.txt  package.xml
src/summit_odometry/config/: ekf_localization.yaml
src/summit_odometry/launch/: start_filter.launch
