<?xml version="1.0"?>
<package format="2">
  <name>elevation_map_merger</name>
  <version>0.0.1</version>
  <description>Offline merger for ANYbotics elevation maps</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  

  <export/>
</package>
